--- a/src/MediaPreviews.css
+++ b/src/MediaPreviews.css
@@ -22,7 +22,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: -20px;
+    gap: -10px;
 }
 
 .ContentDropdown {
